--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Oranienbaum&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Oranienbaum&display=swap');
+
 
 * {
   margin: 0;
@@ -14,7 +17,7 @@ body {
 #main-page {
   display: grid;
   grid-template-columns: 1fr 5fr 1fr;
-  grid-template-rows: 60px 5fr 1fr 1fr;
+  grid-template-rows: 64px 5fr 1fr 1fr;
   width: 100vw;
   height: 100vh;
 }
@@ -37,31 +40,13 @@ body {
   grid-area: 1/2/2/3;
 }
 
-.headline > div {
-  color: whitesmoke;
-  font-family: sans-serif;
-  font-size: 1rem;
-  font-weight: 900;
-}
-
 .headline-highlight {
-  font-family: "New Rocker", system-ui;
-  font-size: 1.5rem; 
-  text-align: center;
-  background: linear-gradient(
-    135deg,
-    #ddd 0%,
-    #ff000057 25%,
-    #de6400 50%,
-    #ffef0ea2 75%,
-    #ddd 100%
-  );
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-	text-shadow:
-    0 0 2px rgba(255,255,255,0.8),
-    2px 2px 4px rgba(0,0,0,0.6);
+  font-family: 'Oranienbaum', system-ui;
+  font-size: 1.75rem;
+  color: oklch(39.673% 0.01661 262.331);
+  text-shadow: 0 0 1px black;
+  border-bottom: 1px solid oklch(39.673% 0.01661 262.331);
+  padding: 0.4rem;
 }
 
 .burger-button-container {
@@ -82,7 +67,7 @@ body {
 }
 
 #slideshow-container {
-  grid-area: 2/1/end/4;
+  grid-area: 2/1/5/4;
   background: black;
   overflow: hidden;
 }
@@ -173,11 +158,11 @@ body {
   text-align: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.233);
+  background-color: gray;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  box-shadow: inset 0 0 10rem 5rem #000;
+  box-shadow: inset 0 0 20rem 1rem #000;
   /* padding: 1rem; */
 }
 
@@ -186,7 +171,6 @@ body {
   padding: 0;
   text-decoration: none;
   color: white;
-  font-family: 'Metal Mania';
   font-size: 3rem;
   text-shadow: 0 0 1.25rem black, 0 0 1.25rem black, 0 0 1.25rem black, 0 0 1.25rem black;
   transition: transform 0.3s ease-out;
@@ -209,7 +193,7 @@ body {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: whitesmoke;
+  background-color: oklch(39.673% 0.01661 262.331);
   transition: transform 0.25s ease-out;
   transform-origin: bottom right;
 }
@@ -227,13 +211,13 @@ body {
   /* transform: scale(1.01); */ /* When hovering over the page-links, around the prev and next buttons a subtle quadratic area appears */ 
 }
 
-#history-page-link {background-image: url(../Images/);}
+#history-page-link {background-image: url(../Images/astronomy-5829414.svg);}
 
-#gravity-page-link {background-image: url(../Images/);}
+#gravity-page-link {background-image: url(../Images/1546636880.svg);}
 
-#resonance-page-link {background-image: url(../Images/);}
+#resonance-page-link {background-image: url(../Images/horizontal_pendulum_2.svg);}
 
-#quiz-page-link {background-image: url(../Images/);}
+#quiz-page-link {background-image: url(../Images/mathematics-7304235.svg);}
 
 /* /slideshow */
 
@@ -283,15 +267,16 @@ body {
 
 @media screen and (min-width: 1000px) {
   #main-page {
-    grid-template-rows: 80px 1fr 1fr 80px;
+    grid-template-rows: 64px 1fr 1fr 80px;
   }
 
   .header {
-    background: gray;
-    grid-area: 1/2/2/3;
+    background: rgb(195, 195, 195);
+    grid-area: 1/1/2/4;
     display: flex;
-    gap: 2rem;
+	align-items: center;
     z-index: 5;
+	border-bottom: 2px solid rgb(133, 133, 133);
   }
 
   .nav-box {
@@ -300,12 +285,14 @@ body {
     gap: 2rem;
     justify-content: space-evenly;
     align-items: center;
+	font-family: "Inter";
+	/* font-weight: 500; */
   }
   .nav-box a {
-    color: whitesmoke;
-    font-size: 1.3rem;
-    font-family: 'New Rocker', system-ui;
+    font-size: 1.25rem;
     text-decoration: none;
+	color: oklch(39.673% 0.01661 262.331);
+	text-shadow: 0 0 1px black;
   }
 
   .button-container {
@@ -313,14 +300,8 @@ body {
     align-items: flex-start;
   }
 
-  .headline > div {font-size: 1.3rem;}
-
-  .headline-highlight {font-size: 1.75rem;}
-
-  .slide-container a {font-size: 5rem;}
-
   #prev,
-  #next {font-size: 2rem;}
+  #next {font-size: 1.75rem;}
 
   .dot {
     width: 14px;
@@ -340,7 +321,7 @@ body {
 .grid-container {
 	display: grid;
 	grid-template-columns: 1fr 5fr 1fr;
-	grid-template-rows: 60px 1fr;
+	grid-template-rows: 64px 1fr;
 	width: 100%;
 	min-height: 100vh;
 }
@@ -566,8 +547,7 @@ body {
 }
 
 @media screen and (min-width: 1000px) {
-	.grid-container {grid-template-rows: 80px 1fr;}
-
+	
   #history-page-main {
 		grid-template-columns: 20fr 1fr 20fr;
 		padding: 0 2rem;
@@ -650,7 +630,6 @@ body {
 	/* background-image: url(../Images/Gray_Matte.jpg);	 */
 	/* background-color: #00000084; */
 	background-position: center;
-	background-blend-mode: color;
 	background-size: cover;
 	background-attachment: fixed;
 	color: whitesmoke;
