--- a/Styles/style.css
+++ b/Styles/style.css
@@ -8,10 +8,6 @@
   box-sizing: border-box;
 }
 
-body {
-  background: lightslategray;
-}
-
 /* main */
 
 #main-page {
@@ -158,12 +154,11 @@ body {
   text-align: center;
   width: 100%;
   height: 100%;
-  background-color: gray;
+  background-color: rgb(150, 150, 150);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  box-shadow: inset 0 0 20rem 1rem #000;
-  /* padding: 1rem; */
+  box-shadow: inset 0 0 24px 8px #000000;
 }
 
 .slide-container > a {
@@ -361,20 +356,21 @@ body {
 /* HISTORY PAGE */
 
 #history-page-main {
-	row-gap: 17rem;
 	display: grid;
-	grid-template-columns: 1fr 3fr 8fr;
-  /* background-image: url(../Images/Gray_Matte.jpg); */
-}
-
-#history-page-header {
-  grid-area: 1/2/2/3;
+	grid-template-columns: 1fr 11fr;
+	grid-template-rows: repeat(9, 1.5fr 0.5fr 1fr);
+	background-color: rgb(150, 150, 150);
+  	background-image: url(../Images/astronomy-5829414_1920.png);
+	background-size: cover;
+	background-blend-mode: color-burn;
+	box-shadow: inset 0 0 12px 4px black;
+	padding-right: 16px;
 }
 
 #ruler {
 	display: flex;
 	justify-content: center;
-	grid-area: 1/1/10/2;
+	grid-area: 1/1/28/2;
 }
 
 #ruler > div {
@@ -397,179 +393,168 @@ body {
 	border: 3px solid rgb(106, 66, 21);
 }
 
-.dates {
-	display: flex;
-	align-items: center;
-	justify-content: start;
-}
-
-.dates {
-	font-family: sans-serif;
-}
-
-.dates,
-.media-container {font-weight: 700;}
-
-.media-container {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-	gap: 0.5rem;
-	font-family: serif;
-}
-
 .text-background > div {
-	background: rgba(0, 0, 0, 0.623);    
+	/* background: rgba(0, 0, 0, 0.623);    
 	box-shadow: 0 0 8px 2px black;
 	border-radius: 8px;  
 	width: 100%;
-	height: 100%;
+	height: 100%; */
+	display: none;
 }
 
-#text-background1 {grid-area: 1/2/2/4;}
-#text-background2 {grid-area: 2/2/3/4;}
-#text-background3 {grid-area: 3/2/4/4;}
-#text-background4 {grid-area: 4/2/5/4;}
-#text-background5 {grid-area: 5/2/6/4;}
-#text-background6 {grid-area: 6/2/7/4;}
-#text-background7 {grid-area: 7/2/8/4;}
-#text-background8 {grid-area: 8/2/9/4;}
-
-#dot1 {
-  grid-area: 1/1/2/2; 
-  margin-top: 2rem;
-}
-#date-1922 {
-  grid-area: 1/2/2/3; 
-  margin-top: 2rem;
-}
-#content-1922 {
-  grid-area: 1/3/2/4;
-  margin-top: 2rem;
-}	
-
-#dot2 {grid-area: 2/1/3/2;}
-#date-1952 {grid-area: 2/2/3/3;}
-#content-1952 {grid-area: 2/3/3/4;}
-
-#dot3 {grid-area: 3/1/4/2;}
-#date-1956 {grid-area: 3/2/4/3;}
-#content-1956 {grid-area: 3/3/4/4;}
-
-#dot4 {grid-area: 4/1/5/2;}
-#date-1964 {grid-area: 4/2/5/3;}
-#content-1964 {grid-area: 4/3/5/4;}
-
-#dot5 {grid-area: 5/1/6/2;}
-#date-1971 {grid-area: 5/2/6/3;}
-#content-1971 {grid-area: 5/3/6/4;}
-
-#dot6 {grid-area: 6/1/7/2;}
-#date-1980 {grid-area: 6/2/7/3;}
-#content-1980 {grid-area: 6/3/7/4;}
-
-#dot7 {grid-area: 7/1/8/2;}
-#date-1991 {grid-area: 7/2/8/3;}
-#content-1991 {grid-area: 7/3/8/4;}
-
-#dot8 {grid-area: 8/1/9/2;}
-#date-1994 {grid-area: 8/2/9/3;}
-#content-1994 {grid-area: 8/3/9/4;}
-
-#content-end  {
-	grid-area: 9/2/10/4;
-	font-family: serif;
-	text-shadow: 0 0 1.25rem black, 0 0 1.25rem black, 0 0 1.25rem black, 0 0 1.25rem black;
-	padding-bottom: 0.5rem;
-}
-
-#date-wrapper {       /*Zweck?*/
+#date-wrapper {
 	display: contents;
 }
 
-@media screen and (max-width: 600px) {
+.dates {
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	padding-left: 8px;	
+	font-family: 'Inter', sans-serif;
+	font-size: 1rem;
+}
+
+.media-container {
+	display: flex;
+	align-items: center;
+	font-size: 1.25rem;
+	padding: 8px;
+		background: rgba(0, 0, 0, 0.623);    
+		box-shadow: 0 0 1rem 0.25rem black;
+		border-radius: 8px; 
+}
+
+/* #text-background1 {grid-area: 2/2/4/3;}
+#text-background2 {grid-area: 5/2/7/3;}
+#text-background3 {grid-area: 8/2/10/3;}
+#text-background4 {grid-area: 11/2/13/3;}
+#text-background5 {grid-area: 14/2/16/3;}
+#text-background6 {grid-area: 17/2/19/3;}
+#text-background7 {grid-area: 20/2/22/3;}
+#text-background8 {grid-area: 23/2/25/3;} */
+
+#dot1 {grid-area: 2/1/3/2;}
+#date-1922 {grid-area: 2/2/3/3;}
+#content-1922 {grid-area: 3/2/4/3;}
+
+#dot2 {grid-area: 5/1/6/2;}
+#date-1952 {grid-area: 5/2/6/3;}
+#content-1952 {grid-area: 6/2/7/3;}
+
+#dot3 {grid-area: 8/1/9/2;}
+#date-1956 {grid-area: 8/2/9/3;}
+#content-1956 {grid-area: 9/2/10/3;}
+
+#dot4 {grid-area: 11/1/12/2;}
+#date-1964 {grid-area: 11/2/12/3;}
+#content-1964 {grid-area: 12/2/13/2;}
+
+#dot5 {grid-area: 14/1/15/2;}
+#date-1971 {grid-area: 14/2/15/3;}
+#content-1971 {grid-area: 15/2/16/3;}
+
+#dot6 {grid-area: 17/1/18/2;}
+#date-1980 {grid-area: 17/2/18/3;}
+#content-1980 {grid-area: 18/2/19/3;}
+
+#dot7 {grid-area: 20/1/21/2;}
+#date-1991 {grid-area: 20/2/21/3;}
+#content-1991 {grid-area: 21/2/22/3;}
+
+#dot8 {grid-area: 23/1/24/2;}
+#date-1994 {grid-area: 23/2/24/3;}
+#content-1994 {grid-area: 24/2/25/3;}
+
+#content-end {
+	grid-area: 26/2/27/3;
+	text-shadow: 0 0 1rem black;
+}
+
+@media screen and (min-width: 601px) {
+
 	#history-page-main {
-		grid-template-columns: 1fr 11fr;
-		row-gap: 0;
-		grid-template-rows: repeat(8, 1fr 3fr 4fr);
+		grid-template-columns: 1fr 2fr 8fr;
+		grid-template-rows: repeat(9, 4fr 2fr) 1.5fr;
 	}
 
-	#ruler {grid-area: 1/1/end/2;}
+	#ruler {
+		grid-area: 1/1/end/2;
+	}
 
-	.dates {justify-content: start;}
+	.dates {font-size: 1.25rem;}
 
-	#text-background1 {grid-area: 1/2/3/3;}
-	#text-background2 {grid-area: 4/2/6/3;}
-	#text-background3 {grid-area: 7/2/9/3;}
-	#text-background4 {grid-area: 10/2/12/3;}
-	#text-background5 {grid-area: 13/2/15/3;}
-	#text-background6 {grid-area: 16/2/18/3;}
-	#text-background7 {grid-area: 19/2/21/3;}
-	#text-background8 {grid-area: 22/2/24/3;}
+	.media-container {font-size: 1.5rem;}
 
-	#dot1 {grid-area: 1/1/2/2;}
-	#date-1922 {grid-area: 1/2/2/3;}
-	#content-1922 {grid-area: 2/2/3/3; margin: 0;}
+	/* #text-background1 {grid-area: 2/2/3/4;}
+	#text-background2 {grid-area: 4/2/5/4;}
+	#text-background3 {grid-area: 6/2/7/4;}
+	#text-background4 {grid-area: 8/2/9/4;}
+	#text-background5 {grid-area: 10/2/11/4;}
+	#text-background6 {grid-area: 12/2/13/4;}
+	#text-background7 {grid-area: 14/2/15/4;}
+	#text-background8 {grid-area: 16/2/17/4;} */
+
+	#dot1 {grid-area: 2/1/3/2;}
+	#date-1922 {grid-area: 2/2/3/3;}
+	#content-1922 {grid-area: 2/3/3/4;}	
 
 	#dot2 {grid-area: 4/1/5/2;}
 	#date-1952 {grid-area: 4/2/5/3;}
-	#content-1952 {grid-area: 5/2/6/3;}
+	#content-1952 {grid-area: 4/3/5/4;}
 
-	#dot3 {grid-area: 7/1/8/2;}
-	#date-1956 {grid-area: 7/2/8/3;}
-	#content-1956 {grid-area: 8/2/9/3;}
+	#dot3 {grid-area: 6/1/7/2;}
+	#date-1956 {grid-area: 6/2/7/3;}
+	#content-1956 {grid-area: 6/3/7/4;}
 
-	#dot4 {grid-area: 10/1/11/2;}
-	#date-1964 {grid-area: 10/2/11/3;}
-	#content-1964 {grid-area: 11/2/12/2;}
+	#dot4 {grid-area: 8/1/9/2;}
+	#date-1964 {grid-area: 8/2/9/3;}
+	#content-1964 {grid-area: 8/3/9/4;}
 
-	#dot5 {grid-area: 13/1/14/2;}
-	#date-1971 {grid-area: 13/2/14/3;}
-	#content-1971 {grid-area: 14/2/15/3;}
+	#dot5 {grid-area: 10/1/11/2;}
+	#date-1971 {grid-area: 10/2/11/3;}
+	#content-1971 {grid-area: 10/3/11/4;}
 
-	#dot6 {grid-area: 16/1/17/2;}
-	#date-1980 {grid-area: 16/2/17/3;}
-	#content-1980 {grid-area: 17/2/18/3;}
+	#dot6 {grid-area: 12/1/13/2;}
+	#date-1980 {grid-area: 12/2/13/3;}
+	#content-1980 {grid-area: 12/3/13/4;}
 
-	#dot7 {grid-area: 19/1/20/2;}
-	#date-1991 {grid-area: 19/2/20/3;}
-	#content-1991 {grid-area: 20/2/21/3;}
+	#dot7 {grid-area: 14/1/15/2;}
+	#date-1991 {grid-area: 14/2/15/3;}
+	#content-1991 {grid-area: 14/3/15/4;}
 
-	#dot8 {grid-area: 22/1/23/2;}
-	#date-1994 {grid-area: 22/2/23/3;}
-	#content-1994 {grid-area: 23/2/24/3;}
+	#dot8 {grid-area: 16/1/17/2;}
+	#date-1994 {grid-area: 16/2/17/3;}
+	#content-1994 {grid-area: 16/3/17/4;}
 
-	#content-end {grid-area: 25/2/26/3;}
-
-	.dates,
-	.media-container {font-size: 1rem;}
+	#content-end  {grid-area: 18/2/19/4;}
 }
 
 @media screen and (min-width: 1000px) {
 	
-  #history-page-main {
+  	#history-page-main {
 		grid-template-columns: 20fr 1fr 20fr;
-		padding: 0 2rem;
+		grid-template-rows: repeat(9, 1fr 2fr) 1fr;
+		padding: 0 16px;
 	}
 
 	#date-wrapper > *:nth-child(odd) {margin-left: auto;} 
 	#date-wrapper > *:nth-child(even) {margin-right: auto;}
 
-	#ruler {grid-area: 1/2/10/3;}
+	#ruler {grid-area: 1/2/end/3;}
 
 	.text-background {display: none;}
+
+	.dates {
+		font-size: 1.5rem;
+		text-shadow: 0 0 1.25rem black;
+	}
 
 	.media-container {
 		font-size: 1.5rem;
 		background: rgba(0, 0, 0, 0.623);    
 		box-shadow: 0 0 1rem 0.25rem black;
 		border-radius: 8px; 
-	}
-
-	.dates {
-		font-size: 1.5rem;
-		text-shadow: 0 0 1.25rem black, 0 0 1.25rem black, 0 0 1.25rem black, 0 0 1.25rem black;
 	}
 
 	#date-1922,
@@ -582,39 +567,39 @@ body {
 	#content-1980,
 	#content-1994 {text-align: right;}
 
-	#date-1922 {grid-area: 1/1/2/2;}
-	#dot1 {grid-area: 1/2/2/3;}
-	#content-1922 {grid-area: 1/3/2/4;}
+	#date-1922 {grid-area: 2/1/3/2;}
+	#dot1 {grid-area: 2/2/3/3;}
+	#content-1922 {grid-area: 2/3/3/4;}
 
-	#date-1952 {grid-area: 2/3/3/4;}
-	#dot2 {grid-area: 2/2/3/3;}
-	#content-1952 {grid-area: 2/1/3/2;}
+	#date-1952 {grid-area: 4/3/5/4;}
+	#dot2 {grid-area: 4/2/5/3;}
+	#content-1952 {grid-area: 4/1/5/2;}
 
-	#date-1956 {grid-area: 3/1/4/2;}
-	#dot3 {grid-area: 3/2/4/3;}
-	#content-1956 {grid-area: 3/3/4/4;}
+	#date-1956 {grid-area: 6/1/7/2;}
+	#dot3 {grid-area: 6/2/7/3;}
+	#content-1956 {grid-area: 6/3/7/4;}
 
-	#date-1964 {grid-area: 4/3/5/4;}
-	#dot4 {grid-area: 4/2/5/3;}
-	#content-1964 {grid-area: 4/1/5/2;}
+	#date-1964 {grid-area: 8/3/9/4;}
+	#dot4 {grid-area: 8/2/9/3;}
+	#content-1964 {grid-area: 8/1/9/2;}
 
-	#date-1971 {grid-area: 5/1/6/2;}
-	#dot5 {grid-area: 5/2/6/3;}
-	#content-1971 {grid-area: 5/3/6/4;}
+	#date-1971 {grid-area: 10/1/11/2;}
+	#dot5 {grid-area: 10/2/11/3;}
+	#content-1971 {grid-area: 10/3/11/4;}
 
-	#date-1980 {grid-area: 6/3/7/4;}
-	#dot6 {grid-area: 6/2/7/3;}
-	#content-1980 {grid-area: 6/1/7/2;}
+	#date-1980 {grid-area: 12/3/13/4;}
+	#dot6 {grid-area: 12/2/13/3;}
+	#content-1980 {grid-area: 12/1/13/2;}
 
-	#date-1991 {grid-area: 7/1/8/2;}
-	#dot7 {grid-area: 7/2/8/3;}
-	#content-1991 {grid-area: 7/3/8/4;}
+	#date-1991 {grid-area: 14/1/15/2;}
+	#dot7 {grid-area: 14/2/15/3;}
+	#content-1991 {grid-area: 14/3/15/4;}
 	
-	#date-1994 {grid-area: 8/3/9/4;}
-	#dot8 {grid-area: 8/2/9/3;}
-	#content-1994 {grid-area: 8/1/9/2;}
+	#date-1994 {grid-area: 16/3/17/4;}
+	#dot8 {grid-area: 16/2/17/3;}
+	#content-1994 {grid-area: 16/1/17/2;}
 
-	#content-end  {grid-area: 9/3/10/4;}
+	#content-end  {grid-area: 18/3/19/4;}
 }
 
 /* /HISTORY PAGE */
