--- a/Styles/style.css
+++ b/Styles/style.css
@@ -24,22 +24,27 @@
 
 .nav-box {display: none;}
 
-#main-page-headline {
-  grid-area: 1/2/2/3;
-}
+/* #main-page-headline {
+  grid-area: 1/1/2/3;
+} */
 
 .headline { /*make header sticky for mobile view*/
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  grid-area: 1/2/2/3;
+  grid-area: 1/1/2/end;
+  background-color: rgb(195, 195, 195);
+  border-bottom: 2px solid rgb(133, 133, 133);
+  position: sticky;
+  top: 0;
+  z-index: 5;
 }
 
 .headline-highlight {
   font-family: 'Oranienbaum', system-ui;
   font-size: 1.75rem;
-  color: oklch(39.673% 0.01661 262.331);
+  color: rgb(66, 71, 80);
   text-shadow: 0 0 1px black;
   border-bottom: 1px solid oklch(39.673% 0.01661 262.331);
   padding: 0.4rem;
@@ -50,13 +55,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 5;
 }
 
 .burger-button {
   background: transparent;
   border: none;
   font-size: 1.5rem;
-  color: white;
+  color: rgb(66, 71, 80);
   cursor: pointer;
   z-index: 10;
   -webkit-tap-highlight-color: transparent;
@@ -225,11 +233,9 @@
   z-index: 3;
   top: 0;
   left: 0;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0, 0.9);
+  background-color: rgb(195, 195, 195);
   overflow-y: hidden;
   transition: 0.5s;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -242,11 +248,12 @@
 .overlay a {
   padding: 18px;
   text-decoration: none;
-  font-family: sans-serif;
+  font-family: 'Inter', sans-serif;
   font-size: 36px;
   font-weight: 600;
-  color: #818181;
-  display: block;
+  color: rgb(66, 71, 80);
+  display: flex;
+  justify-content: center;
   transition: 0.3s;
 }
 
@@ -272,7 +279,11 @@
 	align-items: center;
     z-index: 5;
 	border-bottom: 2px solid rgb(133, 133, 133);
+	position: sticky;
+	top: 0;
   }
+
+  .headline {border-bottom: none;}
 
   .nav-box {
     flex: 1;
@@ -286,7 +297,7 @@
   .nav-box a {
     font-size: 1.25rem;
     text-decoration: none;
-	color: oklch(39.673% 0.01661 262.331);
+	color: rgb(66, 71, 80);
 	text-shadow: 0 0 1px black;
   }
 
@@ -359,7 +370,7 @@
 	display: grid;
 	grid-template-columns: 1fr 11fr;
 	grid-template-rows: repeat(9, 1fr 0.5fr 1fr);
-	background-color: rgb(150, 150, 150);
+	background-color: rgb(65, 65, 65);
   	background-image: url(../Images/astronomy-5829414_1920.png);
 	background-size: cover;
 	background-blend-mode: color-burn;
@@ -424,6 +435,7 @@
 .timeline-date-title {
 	background: -webkit-linear-gradient(rgb(255, 255, 255), rgb(255, 128, 0));
 	-webkit-background-clip: text;
+	background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
 
