--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Oranienbaum&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Oranienbaum&display=swap');
 
-
 * {
   margin: 0;
   padding: 0;
@@ -70,7 +69,7 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-#slideshow-container {
+#gallery-container {
   grid-area: 2/1/5/4;
   background: black;
   overflow: hidden;
@@ -135,27 +134,24 @@
   background-color: white;
 }
 
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
 /* /main */
 
 /* slideshow */
 
-.mySlides {
-  display: none;
+.gallery-item {
+  /* display: none; */
   height: 100%;
   width: 100%;
+  animation-name: fade;
+  animation-duration: 2s;
 }
 
-.slide-container {
+@keyframes fade {
+	from {opacity: .5}
+	to {opacity: 1}
+}
+
+.gallery-page {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -169,7 +165,7 @@
   box-shadow: inset 0 0 24px 8px #000000;
 }
 
-.slide-container > a {
+.gallery-page > a {
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -214,19 +210,18 @@
   /* transform: scale(1.01); */ /* When hovering over the page-links, around the prev and next buttons a subtle quadratic area appears */ 
 }
 
-#history-page-link {background-image: url(../Images/astronomy-5829414.svg);}
+#gallery-history-page {background-image: url(../Images/astronomy-5829414.svg);}
 
-#gravity-page-link {background-image: url(../Images/1546636880.svg);}
+#gallery-gravity-page {background-image: url(../Images/1546636880.svg);}
 
-#pendulum-page-link {background-image: url(../Images/horizontal_pendulum_2.svg);}
+#gallery-pendulum-page {background-image: url(../Images/horizontal_pendulum_2.svg);}
 
-#quiz-page-link {background-image: url(../Images/mathematics-7304235.svg);}
-
+#gallery-quiz-page {background-image: url(../Images/mathematics-7304235.svg);}
 /* /slideshow */
 
 /* curtain-menu */
 
-.overlay {
+/* .nav-mobile-container {
   height: 0%;
   width: 100%;
   position: fixed;
@@ -241,11 +236,11 @@
   align-items: center;
 }
 
-.overlay-content {
+.nav-mobile-links {
   text-align: center;
 }
 
-.overlay a {
+.nav-mobile-container a {
   padding: 18px;
   text-decoration: none;
   font-family: 'Inter', sans-serif;
@@ -257,14 +252,51 @@
   transition: 0.3s;
 }
 
-.overlay a:hover, .overlay a:focus {
+.nav-mobile-container a:hover, 
+.nav-mobile-container a:focus {
+  color: #f1f1f1;
+} */
+
+#nav-mobile {
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  background-color: rgb(195, 195, 195);
+  overflow-y: hidden;
+  transition: 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#nav-mobile-links {
+  text-align: center;
+}
+
+#nav-mobile a {
+  padding: 18px;
+  text-decoration: none;
+  font-family: 'Inter', sans-serif;
+  font-size: 36px;
+  font-weight: 600;
+  color: rgb(66, 71, 80);
+  display: flex;
+  justify-content: center;
+  transition: 0.3s;
+}
+
+#nav-mobile a:hover, 
+#nav-mobile a:focus {
   color: #f1f1f1;
 }
 
 /* /curtain-menu */
 
 @media screen and (min-width: 550px) {
-  .slide-container a {font-size: 4rem;}
+  .gallery-page a {font-size: 4rem;}
 }
 
 @media screen and (min-width: 1000px) {
@@ -342,26 +374,6 @@
 	color: whitesmoke;
 }
 
-#myBtn {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 20px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: rgb(109, 109, 109); /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 20%; /* Rounded corners */
-  font-size: 20px; /* Increase font size */
-}
-
-#myBtn:hover {
-  background-color: #555; /* Add a dark-grey background on hover */
-}
-
 /* /ALL SUB PAGES */
 
 /* HISTORY PAGE */
@@ -370,7 +382,7 @@
 	display: grid;
 	grid-template-columns: 1fr 11fr;
 	grid-template-rows: repeat(9, 1fr 0.5fr 1fr);
-	background-color: rgb(65, 65, 65); /* zsmfassen */
+	background-color: rgb(70, 70, 70); /* zsmfassen */
   	background-image: url(../Images/astronomy-5829414_1920.png);
 	background-size: cover; /* zsmfasse */
 	background-blend-mode: color-burn; /* zsmfassen */
@@ -650,13 +662,17 @@
 	display: grid;
 	grid-template-columns: 1fr;
 	gap: 48px;
-	background-color: rgb(44, 44, 44);
+	background-color: rgb(70, 70, 70); /* zsmfassen */	
 	background-image: url(../Images/horizontal_pendulum_2.svg);
 	background-blend-mode: color-burn;
 	background-position: center;
   	background-size: cover;
 	box-shadow: inset 0 0 12px 4px black; /* zsmfassen */
 	padding: 16px;
+}
+
+.cross-page-ref {
+	color: white;
 }
 
 .pendulum-text,
