--- a/Styles/style.css
+++ b/Styles/style.css
@@ -943,16 +943,20 @@ input[type="range"] {
 /* QUIZ PAGE */
 
 #quiz-page-main{
-	grid-area: 2/1/3/4;
-	padding: 2rem;
-	/* background-image: url(../Images/); */
+	background-color: rgb(100, 100, 100);
+	background-image: url(../Images/mathematics-7304235.svg);
+	background-blend-mode: color-burn;
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
+	padding: 16px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+
 }
 
 #quiz-page-main h1{
-	/* font-size: 1.5rem; */ /* semantische tags anpassen? zb h tags für mobile view*/
 	color: whitesmoke;
 	font-weight: 900;
 	border-bottom: 1px solid whitesmoke;
@@ -962,8 +966,7 @@ input[type="range"] {
 .quiz{
 	display: flex;
 	flex-direction: column;
-  padding-top: 2rem;
-	/* z-index: 1; */
+	/* gap: 32px; */
 }
 
 #quiz-page-main h1 {
@@ -1007,12 +1010,12 @@ input[type="range"] {
 	color: white;
 	font-weight: 500;
 	width: 150px;
+	height: 40px;
 	border: 0;
 	padding: 10px;
-	margin: 20px auto 0;
 	border-radius: 4px;
 	cursor: pointer;
-	display: none;
+	visibility: hidden;	
 }
 .correct{
   	background: #9aeabc;
