Remove div from nav-mobile

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -192,29 +192,24 @@
   width: 100%;
   position: fixed;
   z-index: 3;
-  top: 0;
+  top: 32px;
   left: 0;
   background-color: rgb(195, 195, 195);
   overflow-y: hidden;
   transition: 0.5s;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-}
-
-#nav-mobile-links {
-  text-align: center;
+  justify-content: center;
+  gap: 64px;
 }
 
 #nav-mobile a {
-  padding: 18px;
   text-decoration: none;
   font-family: 'Inter', sans-serif;
   font-size: 36px;
   font-weight: 600;
   color: rgb(66, 71, 80);
-  display: flex;
-  justify-content: center;
   transition: 0.3s;
 }
 
