--- a/Styles/style.css
+++ b/Styles/style.css
@@ -104,7 +104,6 @@ header {display: contents;}
 	border: none;
 	color: rgb(65, 75, 85);
 	cursor: pointer;
-	-webkit-tap-highlight-color: transparent;
 	font-size: 24px;
 }
 
@@ -170,10 +169,7 @@ header {display: contents;}
 		color: rgb(65, 75, 85);
 	}
 
-	.highlight-text {
-		position: relative;
-		transition: all 0.3s ease;
-	}
+	.highlight-text {position: relative;}
 
 	.highlight-text::after {
 		content: '';
@@ -195,7 +191,7 @@ header {display: contents;}
 
 	.burger-button-container,
 	.burger-button,
-	.overlay {display: none;}
+	#nav-mobile {display: none;}
 }
 
 
@@ -312,7 +308,6 @@ header {display: contents;}
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	z-index: 1;
 }
 
 .ruler-dot > div {
@@ -602,7 +597,7 @@ header {display: contents;}
 }
 
 .pendulum-text,
-#pendulum-wrapper,
+#pendulum-demo,
 .pendulum-controls,
 .pendulum-control-group {
 	display: flex;
@@ -610,7 +605,7 @@ header {display: contents;}
 }
 
 .pendulum-text,
-#pendulum-wrapper,
+#pendulum-demo,
 .pendulum-controls,
 .pendulum-control-group {gap: 16px;}
 
@@ -620,7 +615,7 @@ header {display: contents;}
 
 #pendulum-text-3 {grid-area: 4/1/5/2;}
 
-#pendulum-wrapper {grid-area: 3/1/4/2;}
+#pendulum-demo {grid-area: 3/1/4/2;}
 
 #pendulum-container {
 	margin: 0 auto;
@@ -679,7 +674,7 @@ input[type="range"] {
 	#pendulum-text-2 {grid-area: 1/2/2/3;}
 	#pendulum-text-3 {grid-area: 3/1/4/3;}
 
-	#pendulum-wrapper {display: contents;}
+	#pendulum-demo {display: contents;}
 
 	#pendulum-container {
 		grid-area: 2/1/3/2;
@@ -689,7 +684,7 @@ input[type="range"] {
 		align-items: center;
 	}
 
-	#pendulum-test {
+	#pendulum-wrapper {
 		display: flex;
 		align-items: center;
 	}
@@ -713,7 +708,7 @@ input[type="range"] {
 
 	.pendulum-text-title,
 	.pendulum-text-desc-ctn,
-	#pendulum-wrapper,
+	#pendulum-demo,
 	#pendulum-container {
 		display: flex;
 		flex-direction: row;
@@ -729,7 +724,7 @@ input[type="range"] {
 	#pendulum-text-title-3 {grid-area: 4/1/5/2;}
 	#pendulum-text-desc-3-ctn {grid-area: 4/2/5/4;}
 
-	#pendulum-wrapper {
+	#pendulum-demo {
 		grid-area: 3/1/4/4;
 		justify-content: center;
 		gap: 32px;
@@ -764,10 +759,14 @@ input[type="range"] {
 .quiz-container {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	gap: 16px;
 }
 
+#quiz-question {align-self: center;}
+
 #answer-buttons {
+	align-self: stretch;
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
