--- a/Styles/style.css
+++ b/Styles/style.css
@@ -752,11 +752,13 @@ input[type="range"] {
 	background-image: url(../Images/math-formulas-sketch-handwritten.svg);
 	padding: 16px;
 	display: flex;
-	flex-direction: column;
+	/* flex-direction: column; */
 	justify-content: center;
+	align-items: center;
 }
 
 .quiz-container {
+	flex: 1;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
