--- a/Styles/style.css
+++ b/Styles/style.css
@@ -138,7 +138,7 @@ header {display: contents;}
 @media screen and (min-width: 1000px) {
 
 	.header {
-		grid-area: 1/1/2/4;
+		grid-area: 1/1/2/2;
 		background: rgb(195, 195, 195);
 		display: flex;
 		align-items: center;
@@ -156,7 +156,6 @@ header {display: contents;}
 	.nav-box {
 		flex: 1;
 		display: flex;
-		gap: 2rem;
 		justify-content: space-evenly;
 		align-items: center;
 	}
@@ -168,6 +167,13 @@ header {display: contents;}
 		text-decoration: none;
 		color: rgb(65, 75, 85);
 	}
+
+	/* === BEGIN CC-BY-4.0 CODE ============================
+	* Author: Angelos Chalaris
+	* Source: https://github.com/Chalarangelo/30-seconds-of-code/blob/master/content/snippets/css/s/hover-underline-animation.md
+	* License: CC BY 4.0 — https://creativecommons.org/licenses/by/4.0/
+	* Changes: modified class names and colors
+	* =================================================== */
 
 	.highlight-text {position: relative;}
 
@@ -189,6 +195,8 @@ header {display: contents;}
 		transform-origin: bottom left;
 	}
 
+	/* === END CC-BY-4.0 CODE ============================== */
+
 	.burger-button-container,
 	.burger-button,
 	#nav-mobile {display: none;}
@@ -197,7 +205,7 @@ header {display: contents;}
 
 
 /* ======================
-   Main sections
+   Main grid sections
    ====================== */
 .grid-container {
 	display: grid;
@@ -217,12 +225,16 @@ header {display: contents;}
 	box-shadow: inset 0 0 12px 4px black; 
 }
 
+@media screen and (min-width: 1000px) {
+	.grid-container {grid-template-columns: 1fr;}
+}
+
 
 
 /* ======================
    Home Page
    ====================== */
-#main-page {
+#home-page {
 	display: grid;
 	grid-template-columns: 1fr 5fr 1fr;
 	grid-template-rows: 64px 1fr;
@@ -275,7 +287,7 @@ header {display: contents;}
 }
 
 @media screen and (min-width: 1000px) {
-
+	#home-page {grid-template-columns: 1fr;}
 	.gallery-page-link {font-size: 4rem;}
 }
 
@@ -499,13 +511,13 @@ header {display: contents;}
 	gap: 16px;
 }
 
-#gravity-text-1{grid-row: 2 / 3;}
+#gravity-text-1{grid-row: 2/3;}
 
-#picture-Newton{grid-row: 1 / 2;}
+#picture-Newton{grid-row: 1/2;}
 
-#gravity-formula-1{grid-row: 3 / 4;}
+#gravity-formula-1{grid-row: 3/4;}
 
-#apple-tree1{grid-row: 4 / 5;}
+#apple-tree1{grid-row: 4/5;}
 
 .tree-wrapper{
 	position: relative;
@@ -548,25 +560,13 @@ header {display: contents;}
 		grid-template-rows: auto auto auto;
 	}
 
-	#gravity-text-1{
-		grid-column: 1 / 2;
-		grid-row: 1 / 2;
-	}
+	#gravity-text-1{grid-area: 1/1/2/2;}
 
-	#picture-Newton{
-		grid-column: 2 / 3;
-		grid-row: 1 / 2;
-	}
+	#picture-Newton{grid-area: 1/2/2/3;}
 
-	#gravity-formula-1{
-		grid-column: 1 / 3;
-		grid-row: 2 / 3;
-	}
+	#gravity-formula-1{grid-area: 2/1/3/3;}
 
-	#apple-tree1{
-		grid-column: 1 / 3;
-		grid-row: 3 / 4;
-	}
+	#apple-tree1{grid-area: 3/1/4/3;}
 }
 
 
@@ -578,7 +578,6 @@ header {display: contents;}
 	display: grid;
 	grid-template-columns: 1fr;
 	gap: 48px;
-	background-image: url(../Images/pendulum-mechanical-clock-physics.svg);
 	padding: 16px;
 }
 
@@ -752,7 +751,6 @@ input[type="range"] {
 	background-image: url(../Images/math-formulas-sketch-handwritten.svg);
 	padding: 16px;
 	display: flex;
-	/* flex-direction: column; */
 	justify-content: center;
 	align-items: center;
 }
